Fixed bugs on display and refactored code.