@@ -6,14 +6,11 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Random;
 import java.util.Scanner;
-import java.util.stream.Collectors;
-public class HangmanController {
 
-    
-    /**
-     * All the words used in Hangman.
-     */
-    private ArrayList<String> wordsList;
+/**
+ * The HangmanController class manages the logic of the Hangman game.
+ */
+public class HangmanController {
 
     /**
      * Randomly selected word for the current game.
@@ -24,43 +21,50 @@ public class HangmanController {
      * Max tries for the game participant allowed in the Hangman game.
      */
     int userLife;
-    private int SIX = 6;
 
-    private ArrayList<Character> wrongList = new ArrayList<>();;
-    private ArrayList<Character> correctList = new ArrayList<>();;
+     /**
+     * Default number of lives for the player.
+     */
+    private final int SIX = 6;
+
+    private final ArrayList<Character> wrongList = new ArrayList<>();
+    private final ArrayList<Character> correctList = new ArrayList<>();
 
     private HangmanView hangmanView;
     private String userMessage = "";
     private String hiddenWord = "_____";
-
+    private String systemMessage = "";
+    private int playerScore = SIX;
     public void setGame() {
+        hangmanView.setHangmanDisplay();
         String osName = System.getProperty("os.name").toLowerCase();
+        ArrayList<String> wordsList;
         if (osName.contains("win")) {
             // Windows
-            wordsList = getWords("src\\test\\resources\\wordlist-test.txt");
+            wordsList = getWords("src\\main\\resources\\wordlist.txt");
         } else {
-            // Assume Linux or Unix-like
-            wordsList = getWords("src/test/resources/wordlist-test.txt");
+            // Linux or Unix-like
+            wordsList = getWords("src/main/resources/wordlist.txt");
         }
-        correctWord = getRandomWord(this.wordsList);
+        correctWord = getRandomWord(wordsList);
         setUserLife(SIX);
-        System.out.println("Random word: " + correctWord);
-        if(wrongList!=null) {
-            if(wrongList.size()>0) {
-                wrongList.clear();
-            }
+        if (!wrongList.isEmpty()) {
+            wrongList.clear();
         }
-        if(correctList!=null) {
-            if(correctList.size()>0) {
-                correctList.clear();
-            }
+        if (!correctList.isEmpty()) {
+            correctList.clear();
         }
         hiddenWord = "_____";
         userMessage = "";
+        playerScore = SIX;
+        systemMessage = "";
     }
 
     public void startGame() {
         hangmanView.displayHangman();
+        if(!systemMessage.isEmpty()) {
+            System.out.println(systemMessage);
+        }
         if(userLife<SIX) {
             hangmanView.displayUserLife(userLife);
             hangmanView.displayWrongLetters(wrongList);
@@ -72,26 +76,29 @@ public class HangmanController {
             // Recursive call to continue the game
             startGame();
 
-        } else {
+        } 
+        else {
             // Display the result of the game. If count is greater than or equal to 0 and the hidden word,
             // no longer contains any underscores the player has won the game.
             hangmanView.displayHangman();
             System.out.println(getUserMessage() + "\n");
+            System.out.println("Your score is " + getPlayerScore() + "\n");
 
             Scanner scanner = new Scanner(System.in);
+            // Checks if the user wants to play again.
             System.out.print("Would you like to play again?[y/n]: ");
             String input = scanner.nextLine();
             int counterInput = 1;
             do
             {
                 if (input.equalsIgnoreCase("y") || input.equalsIgnoreCase("yes")) {
-
-                    // Checks if the user wants to play again.
+                    //if Yes, set the game again and start it.
                     setGame();
                     startGame();
                     counterInput= 4;
                 }
                 else if (input.equalsIgnoreCase("n") || input.equalsIgnoreCase("no")){
+                    //if No, exit the game.
                     System.out.println("\n\nThank you for playing Hangman!!!\nHave a nice day : )");
                     counterInput= 4;
                 }
@@ -102,6 +109,10 @@ public class HangmanController {
             }while(counterInput<4);
             scanner.close();
         }
+    }
+
+    public int getPlayerScore() {
+        return playerScore;
     }
 
     public String getUserMessage() {
@@ -121,12 +132,13 @@ public class HangmanController {
     }
 
     public boolean gameEnd() {
-            if (userLife > 0 && !Arrays.stream(hiddenWord.split("")).collect(Collectors.toList()).contains("_")) {
+            if (userLife > 0 && !Arrays.stream(hiddenWord.split("")).toList().contains("_")) {
                 System.out.println();
                 setUserMessage("\nYou won! :)");
+                playerScore +=5;
                 return true;
             } 
-            else if (userLife == 0 && Arrays.stream(hiddenWord.split("")).collect(Collectors.toList()).contains("_")){
+            else if (userLife == 0 && Arrays.stream(hiddenWord.split("")).toList().contains("_")){
                 System.out.println();
                 setUserMessage("\nYou lose!");
                 System.out.println("The correct word was: " + correctWord);
@@ -135,51 +147,55 @@ public class HangmanController {
         return false;
     }
 
-    private boolean checkValidInput(String userInput) {
+    private void checkValidInput(String userInput) {
+        //check if the userinput is valid or not
         if (userInput.length() == 1 && Character.isLetter(userInput.charAt(0))) {
+            //single character check successful.
             char userInputChar = Character.toLowerCase(userInput.charAt(0));
+            //check if character has been used before.
             for (char ch : wrongList) {
                 if (ch == userInputChar) {
                     System.out.println("You have already entered the character before.\nPLease try again.");
-                    return false;
+                    return;
                 }
             }
             for (char ch : correctList) {
                 if (ch == userInputChar) {
                     System.out.println("You have already entered the character before.\nPLease try again.");
-                    return false;
+                    return;
                 }
             }
             // Check if the character entered by player is present in the word
-            if (Arrays.stream(correctWord.split("")).collect(Collectors.toList()).contains(String.valueOf(userInputChar))) {
-
-            // Update the hidden word based on the entered character
-            for (int i = 0; i < correctWord.split("").length; i++) {
-                if (correctWord.split("")[i].equals(String.valueOf(userInputChar))) {
-                    StringBuilder stringBuilder = new StringBuilder(hiddenWord);
-                    stringBuilder.setCharAt(i, userInputChar);
-
-                    // Convert StringBuilder back to String
-                    hiddenWord = stringBuilder.toString();
+            if (Arrays.stream(correctWord.split("")).toList().contains(String.valueOf(userInputChar))) {
+                // Update the hidden word based on the entered character
+                for (int i = 0; i < correctWord.split("").length; i++) {
+                    if (correctWord.split("")[i].equals(String.valueOf(userInputChar))) {
+                        StringBuilder stringBuilder = new StringBuilder(hiddenWord);
+                        stringBuilder.setCharAt(i, userInputChar);
+                        // Convert StringBuilder back to String
+                        hiddenWord = stringBuilder.toString();
+                    }
                 }
+                systemMessage = "\nCorrect Choice!!!";
+                //increase player score and add to used list.
+                playerScore += 3;
+                correctList.add(userInputChar);
             }
-            correctList.add(userInputChar);
-            return true;
-        } else {
-            userLife--;
-            hangmanView.updateHangman(userLife);
-            wrongList.add(userInputChar);
-        }
-
-            // Draw Hangman based on whether user entered a character present in the hidden word or not
-
-        } else {
+            else {
+                //decrease player score and add to used list.
+                systemMessage = "\nIncorrect Choice!!!";
+                decreaseUserLife();
+                playerScore--;
+                hangmanView.updateHangman(userLife);
+                wrongList.add(userInputChar);
+            }
+        } 
+        else {
             System.out.println("Please enter a valid letter [a-z]");
         }
-        return false;
     }
 
-    public void decreaseUserLife() {
+    private void decreaseUserLife() {
         userLife--;
     }
 
@@ -192,8 +208,7 @@ public class HangmanController {
         ArrayList<String> words = new ArrayList();
         try {
             words = (ArrayList<String>) Files.readAllLines(Paths.get(fileName));
-        } catch (IOException e) {
-            e.printStackTrace();
+        } catch (IOException ignored) {
         }
         return(words);
     }
